@@ -1,0 +1,34 @@
+/*
+ * wasap.c - Another Slight Atari Player for Win32 systems
+ *
+ * Copyright (C) 2005-2010  Piotr Fusik
+ *
+ * This file is part of ASAP (Another Slight Atari Player),
+ * see http://asap.sourceforge.net
+ *
+ * ASAP is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU General Public License as published
+ * by the Free Software Foundation; either version 2 of the License,
+ * or (at your option) any later version.
+ *
+ * ASAP is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty
+ * of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+ * See the GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with ASAP; if not, write to the Free Software Foundation, Inc.,
+ * 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
+ */
+
+#define IDI_APP        101
+#define IDI_STOP       102
+#define IDI_PLAY       103
+#define IDR_TRAYMENU   200
+#define IDM_OPEN       201
+#define IDM_STOP       202
+#define IDM_FILE_INFO  203
+#define IDM_SAVE_WAV   204
+#define IDM_ABOUT      205
+#define IDM_EXIT       206
+#define IDM_SONG1      211
